Revert "Fixed component help popup breaks in UI"
This reverts commit fbdf4300ac4bfaa3721987e6e880a0a0893e296f.

--- a/appinventor/appengine/war/Ya.css
+++ b/appinventor/appengine/war/Ya.css
@@ -1030,10 +1030,6 @@ select.ode-PropertyEditor[disabled] {
   color: #8fc202;
 }
 
-.ode-ComponentHelpPopup>.popupContent>table{
-	width:100%;
-}
-
 .compiler-ErrorMarker {
   color: red;
 }
